added doc & admin modules
